--- a/OpenGl/OpenGL.vcxproj
+++ b/OpenGl/OpenGL.vcxproj
@@ -93,6 +93,9 @@
     <ClCompile Include="src\Source.cpp" />
     <ClCompile Include="src\glad.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\ShaderCompile.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
